--- a/iac/acm-multienv-cicd-anthos-autopilot/overlays/production/configmap.yaml
+++ b/iac/acm-multienv-cicd-anthos-autopilot/overlays/production/configmap.yaml
@@ -16,4 +16,4 @@ kind: ConfigMap
 metadata:
   name: cloud-sql-admin
 data:
-  connectionName: bank-of-anthos-ci:us-central1:bank-of-anthos-db-production
+  connectionName: henrybell-argolis-boa-7:us-central1:bank-of-anthos-db-production
